@@ -6,7 +6,7 @@
         <groupId>io.github.kriolos.obiz</groupId>
         <artifactId>kriolos-obiz-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../</relativePath>
+        <relativePath/>
     </parent>
 
     <artifactId>kriolos-obiz-app</artifactId>
@@ -26,6 +26,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <all.clusters>${project.build.directory}/${brandingToken}</all.clusters>
+        <jpms-flags>
+            -Djava.security.manager=allow
+            --add-opens=java.base/java.net=ALL-UNNAMED
+            <!-- add more "add opens" if needed -->
+        </jpms-flags>
     </properties>
 
     <dependencies>
@@ -49,9 +54,9 @@
         </dependency>
         
         <dependency>
-            <groupId>io.github.kriolos.opos</groupId>
-            <artifactId>kriolos-pos</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>kriolos-pos-nbm</artifactId>
+            <version>${project.version}</version>
             <type>nbm-file</type>
         </dependency>
         <dependency>
@@ -95,9 +100,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.2</version>
+                <version>3.5.2</version>
                 <configuration>
+
                     <systemPropertyVariables>
+                        <argLine>${jpms-flags}</argLine>
                         <all.clusters>${all.clusters}</all.clusters>
                         <branding.token>${brandingToken}</branding.token>
                     </systemPropertyVariables>
